--- a/Homework/CheckBook/CheckBook/Views/Home/Index.cshtml
+++ b/Homework/CheckBook/CheckBook/Views/Home/Index.cshtml
@@ -1,23 +1,12 @@
-﻿@model CheckBookModel
+﻿@model CheckBookModelEn
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <form method="post">
-        <div>
-            <label for="number">Insert a number:</label>
-            <input type="number" id="number" name="number" required />
-        </div>
-        <button type="submit">Submit</button>
-    </form>
-</div>
-
-@if (!string.IsNullOrEmpty(Model.inFull) )
-{
-    <div>
-        <h3>Your number:</h3>
-        <p>@Model.inFull</p>
+<div class="row justify-content-center mt-4">
+    <div class="col-md-6 text-center">
+        <a href="@Url.Action("Index", "CheckBook", new { language = "pt" })" class="btn btn-link">Português</a> |
+        <a href="@Url.Action("Index", "CheckBook", new { language = "en" })" class="btn btn-link">English</a>
     </div>
-}
+</div>
