--- a/Homework/CheckBook/CheckBook/Views/Home/IndexPt.cshtml
+++ b/Homework/CheckBook/CheckBook/Views/Home/IndexPt.cshtml
@@ -13,7 +13,7 @@
                     <form method="post">
                         <div class="mb-3">
                             <label for="number" class="form-label">Insira um número:</label>
-                            <input class="form-control" type="number" id="number" name="number" step="0.01" required min="0" max="1000000"  />
+                            <input class="form-control" type="number" id="number" name="number" required min="0" max="1000000"  />
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Enviar</button>
                     </form>
