--- a/Classes/03_Ifs/03_Ifs/Views/Home/Index.cshtml
+++ b/Classes/03_Ifs/03_Ifs/Views/Home/Index.cshtml
@@ -4,54 +4,83 @@
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <form method="get" asp-action="GetIf">
-                        <div class="form-group mb-3">
-                            <label for="xFromIf" class="form-label">Insert a value for X:</label>
-                            <input type="number" class="form-control" id="xFromIf" name="x"/>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100" >
+        <div class="col-md-8">
+            <h3 class="text-center mb-4">Select a Logic Operation</h3>
+            <div class="accordion" id="menuAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
                             Get If
                         </button>
-                    </form>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            <form method="get" action="/Home/ShowIfResult">
+                                <div class="mb-3">
+                                    <label for="x1" class="form-label">Value for X:</label>
+                                    <input type="number" class="form-control" id="x1" name="x" required />
+                                </div>
+                                <button class="btn btn-primary w-100">Execute Get If</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="card-body">
-                    <form method="get" asp-action="GetSwitch">
-                        <div class="form-group mb-3">
-                            <label for="xFromSwitch" class="form-label">Insert a value for X:</label>
-                            <input type="text" class="form-control" id="xFromSwitch" name="x" />
-                        </div>
-                        <button type="submit" value="GetSwitch" class="btn btn-primary w-100">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
                             Get Switch
                         </button>
-                    </form>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <form method="get" action="/Home/ShowSwitchResult">
+                                <div class="mb-3">
+                                    <label for="x2" class="form-label">Value for X:</label>
+                                    <input type="number" class="form-control" id="x2" name="x" required />
+                                </div>
+                                <button class="btn btn-warning w-100">Execute Get Switch</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="card-body">
-                    <form method="get" asp-action="GetFor">
-                        <div class="form-group mb-3">
-                            <label for="xFromFor" class="form-label">Insert a value for X:</label>
-                            <input type="text" class="form-control" id="xFromFor" name="x" />
-                        </div>
-                        <button type="submit" value="GetFor" class="btn btn-primary w-100">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
                             Get For
                         </button>
-                    </form>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <form method="get" action="/Home/ShowForResult">
+                                <div class="mb-3">
+                                    <label for="x3" class="form-label">Value for X:</label>
+                                    <input type="number" class="form-control" id="x3" name="x" required />
+                                </div>
+                                <button class="btn btn-success w-100">Execute Get For</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="card-body">
-                    <form method="get" asp-action="GetForEach">
-                        <div class="form-group mb-3">
-                            <label for="colorFromGetForEach" class="form-label">Insert a color name:</label>
-                            <input type="text" class="form-control" id="colorFromGetForEach" name="color" />
-                        </div>
-                        <button type="submit" value="GetForEach" class="btn btn-primary w-100">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
                             Get ForEach
                         </button>
-                    </form>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <form method="get" action="/Home/ShowForEachResult">
+                                <div class="mb-3">
+                                    <label for="color" class="form-label">Color name:</label>
+                                    <input type="text" class="form-control" id="color" name="color" required />
+                                </div>
+                                <button class="btn btn-secondary w-100">Execute Get ForEach</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
