--- a/Classes/03_Ifs/03_Ifs/wwwroot/css/site.css
+++ b/Classes/03_Ifs/03_Ifs/wwwroot/css/site.css
@@ -30,6 +30,81 @@ body {
   text-align: start;
 }
 
+/* Jogo da velha */ 
 input {
     text-align: center;
+}
+
+.tic-tac-toe-input {
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    font-size: 24px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    font-weight: bold;
+    background-color: transparent; 
+    outline: none; 
+}
+
+.tic-tac-toe-table {
+    margin: auto;
+    border-collapse: collapse; /* Junta as bordas das células */
+}
+
+    .tic-tac-toe-table td {
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        position: relative;
+    }
+
+    /* Bordas do jogo */
+    .tic-tac-toe-table td {
+        border: 2px solid black;
+    }
+
+    /* Remove bordas externas */
+    .tic-tac-toe-table tr:first-child td {
+        border-top: none;
+    }
+
+    .tic-tac-toe-table tr:last-child td {
+        border-bottom: none;
+    }
+
+    .tic-tac-toe-table td:first-child {
+        border-left: none;
+    }
+
+    .tic-tac-toe-table td:last-child {
+        border-right: none;
+    }}
+
+/* Mantendo footer certo*/
+body {
+    padding-bottom: 60px; /* footer fixo */
+}
+
+footer.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px; 
+    background-color: #f8f9fa;
+    border-top: 1px solid #dee2e6;
+    display: flex;
+    align-items: center;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow-x: hidden; /* impede rolagem vertical */
+}
+
+body {
+    padding-bottom: 60px; 
+    overflow-y: auto; /* barra aparece se for necessario */
 }
