--- a/Classes/04_Recursion/04_Recursion/Views/Shared/_Layout.cshtml
+++ b/Classes/04_Recursion/04_Recursion/Views/Shared/_Layout.cshtml
@@ -32,6 +32,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PrintNaturalRecursion" asp-route-count="20">Print Natural Recursion</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PrintNaturalNumberDescendingRecursion" asp-route-count="20">Print Natural Descending Recursion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PrintSumArithmeticSequence" asp-route-count="10">Print Sum Arithmetic Sequence</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PrintCountCharacters" asp-route-text="Hello World">Print Count Characters</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PrintIsPalindrome" asp-route-word="Radar">Print Is Palindrome</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" >Privacy</a>
                         </li>
                     </ul>
