--- a/Homework/RecursionActivities/RecursionActivities/Views/Shared/_Layout.cshtml
+++ b/Homework/RecursionActivities/RecursionActivities/Views/Shared/_Layout.cshtml
@@ -27,7 +27,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-route-count="10" asp-action="PrintNumbersDecrease">Number Decrease</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-route-count="10" asp-action="PrintFatorial">Fatorial</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-route-count="10" asp-action="PrintSumArithmeticSequence">Sum Arithmetic Sequence</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-route-text="Hello World" asp-action="PrintCountCharacters">Count Characters</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-route-word="Radar" asp-action="PrintIsPalindrome">Palindrome</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
