--- a/Classes/06_Poo/06_Poo/Views/Product/Create.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Product/Create.cshtml
@@ -4,27 +4,40 @@
     ViewData["Title"] = "Create Product";
 }
 
-<div class="text-center">
-    <h1>Product Register</h1>
+<div class="text-center mb-4">
+    <h1 class="display-5">Create Product</h1>
+</div>
 
-    <div class="container">
-        <form asp-action="Create" asp-controller="Product" id="formProduct" method="post">
-            <div class="row">
-                <div class="form-group">
-                    <label asp-for="@Model.Name" class="control-label">Name:</label>
-                    <input type="text" asp-for="@Model.Name" class="form-control" required />
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form asp-action="Create" asp-controller="Product" method="post" id="formProduct">
 
-                    <label asp-for="@Model.Description" class="control-label">Description:</label>
-                    <input type="text" asp-for="@Model.Description" class="form-control" required />
-
-                    <label asp-for="@Model.CurrentPrice" class="control-label">Price:</label>
-                    <input type="number" step="0.01" asp-for="@Model.CurrentPrice" class="form-control" required />
+                <div class="form-group mb-3">
+                    <label asp-for="Name" class="form-label">Name</label>
+                    <input asp-for="Name" class="form-control" required />
                 </div>
-            </div>
 
-            <button id="btnCostumer" type="submit" class="btn btn-primary">
-                Register
-            </button>
-        </form>
+                <div class="form-group mb-3">
+                    <label asp-for="Description" class="form-label">Description</label>
+                    <input asp-for="Description" class="form-control" required />
+                </div>
+
+                <div class="form-group mb-4">
+                    <label asp-for="CurrentPrice" class="form-label">Price</label>
+                    <input asp-for="CurrentPrice" type="number" step="0.01" class="form-control" required />
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <a asp-action="Index" asp-controller="Product" class="btn btn-secondary">
+                        Cancel
+                    </a>
+                    <button type="submit" class="btn btn-primary" id="btnProduct">
+                        Register
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
+
