--- a/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
@@ -1,13 +1,25 @@
 ﻿@model List<PooModel.Product>
 
-<a asp-action="Create" asp-controller="Product" class="btn btn-light">
-    New Product
-</a>
+@{
+    ViewData["Title"] = "Product List";
+}
 
-@if (Model.Count > 0)
+<div class="text-center mb-4">
+    <h1 class="display-5">Product List</h1>
+</div>
+<hr>
+
+
+<div class="mb-3">
+    <a asp-action="Create" asp-controller="Product" class="btn btn-light">
+        New Product
+    </a>
+</div>
+
+@if (Model != null && Model.Count > 0)
 {
-    <table>
-        <thead>
+    <table class="table table-striped table-hover">
+        <thead class="thead-light">
             <tr>
                 <th>Id</th>
                 <th>Name</th>
@@ -16,13 +28,14 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (PooModel.Product product in Model)
+            @foreach (var product in Model)
             {
                 <tr>
                     <td>@product.Id</td>
                     <td>@product.Name</td>
                     <td>@product.Description</td>
-                    <td>@product.CurrentPrice</td>
+                    <!-- C para formatar como moeda-->
+                    <td>@product.CurrentPrice.ToString("C")</td>
                 </tr>
             }
         </tbody>
@@ -30,7 +43,7 @@
 }
 else
 {
-    <div>
-        There's no Product registers
+    <div class="alert alert-warning">
+        There are no product records.
     </div>
 }
