--- a/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
@@ -41,3 +41,9 @@ else
         There are no customer records.
     </div>
 }
+
+<div class="mb-3">
+    <a asp-action="ExportDelimitatedCustumer" asp-controller="Customer" class="btn btn-primary">
+        Export to txt File
+    </a>
+</div>
