--- a/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
@@ -47,3 +47,9 @@ else
         There are no product records.
     </div>
 }
+
+<div class="mb-3">
+    <a asp-action="ExportDelimitatedProduct" asp-controller="Product" class="btn btn-primary">
+        Export to txt File
+    </a>
+</div>
