--- a/Classes/06_Poo/06_Poo/Views/Shared/_Layout.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Shared/_Layout.cshtml
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - _06_Poo</title>
+    <title>@ViewData["Title"] - Store</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/_06_Poo.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
