--- a/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
@@ -20,16 +20,23 @@
     <table class="table table-striped table-hover">
         <thead class="thead-light">
             <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <th class="text-center">Id</th>
+                <th class="text-center">Name</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var customer in Model)
             {
                 <tr>
-                    <td>@customer.Id</td>
+                    <td class ="text-center">@customer.Id</td>
                     <td>@customer.Name</td>
+                    <td class="text-center">
+                        <a asp-action="Delete" asp-controller="Customer" 
+                        asp-route-id="@customer.Id" title="Delete Customer @customer.Name">
+                            <i class="fa-solid fa-trash align-items-center"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
