Not working yet

--- a/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
@@ -50,7 +50,10 @@ else
 }
 
 <div class="mb-3">
-    <a asp-action="ExportDelimitatedCustumer" asp-controller="Customer" class="btn btn-primary">
-        Export to txt File
+    <a asp-action="ExportDelimitatedCustomer" asp-controller="Customer" class="btn btn-primary">
+        Export Delimitated
+    </a>
+    <a asp-action="ExportFixedCustomer" asp-controller="Customer" class="btn btn-primary">
+        Export Fixed
     </a>
 </div>
