--- a/Classes/06_Poo/06_Poo/Views/Customer/Export.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Export.cshtml
@@ -9,7 +9,7 @@
         <a asp-action="Index" asp-controller="Customer" class="btn btn-primary">
             Back to customer list
         </a>
-        <a href="~/TextFiles/Customer/DelimitatedCustomer.txt" download class="btn btn-outline-secondary">
+        <a href="~/TextFiles/@ViewData["Location"]/@ViewData["Name"]" download class="btn btn-outline-secondary">
             Download file
         </a>
     </div>
