--- a/Classes/06_Poo/06_Poo/Views/Customer/Delete.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Delete.cshtml
@@ -1,39 +1,45 @@
-﻿@model PooModel.Customer;
+﻿@model PooModel.Customer
 
 @{
     ViewData["Title"] = "Delete Customer";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            Id:
-        </div>
-        <div class="row-6">
-            @Model.Id
-        </div>
-    </div>
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
 
-    <div class="row">
-        <div class="col-6">
-            Name:
-        </div>
-        <div class="row-6">
-            @Model.Name
-        </div>
-    </div>
+            <div class="card shadow-sm">
+                <div class="card-header bg-danger text-white">
+                    <h5 class="mb-0">Confirm Delete</h5>
+                </div>
+                <div class="card-body">
+                    <p class="lead">
+                        Are you sure you want to delete this customer?
+                    </p>
 
-    <div class="row">
-        <div class="col-12">
-            <form method="Post" asp-action="ConfirmDelete" asp-controller="Customer">
-                <input type="hidden" name="id" value="@Model.Id" />
+                    <dl class="row">
+                        <dt class="col-sm-4">Id:</dt>
+                        <dd class="col-sm-8">@Model.Id</dd>
 
-                <button class="btn btn-danger">
-                    Delete
-                </button>
-            </form>  
-            <a asp-action="Index" asp-controller="Customer" class="btn btn-primary">
-                Back
-            </a>     
+                        <dt class="col-sm-4">Name:</dt>
+                        <dd class="col-sm-8">@Model.Name</dd>
+                    </dl>
+                </div>
+                <div class="card-footer d-flex justify-content-between align-items-center">
+                    <a asp-action="Index" asp-controller="Customer" class="btn btn-secondary">
+                        <i class="fa-solid fa-arrow-left me-1"></i> Back
+                    </a>
+
+                    <form method="post" asp-action="ConfirmDelete" asp-controller="Customer" class="d-inline">
+                        <input type="hidden" name="id" value="@Model.Id" />
+
+                        <button type="submit" class="btn btn-danger me-2">
+                            <i class="fa-solid fa-trash me-1"></i> Delete
+                        </button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
