--- a/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Customer/Index.cshtml
@@ -5,55 +5,58 @@
 }
 
 <div class="text-center mb-4">
-    <h1 class="display-5">Customer List</h1>
+    <h1 class="display-5"><i class="fa-solid fa-users me-2 text-primary"></i> Customer List</h1>
 </div>
 <hr>
 
 <div class="mb-3">
-    <a asp-action="Create" asp-controller="Customer" class="btn btn-light">
-        New Customer
+    <a asp-action="Create" asp-controller="Customer" class="btn btn-success">
+        <i class="fa-solid fa-user-plus me-1"></i> New Customer
     </a>
 </div>
 
 @if (Model != null && Model.Count > 0)
 {
-    <table class="table table-striped table-hover">
-        <thead class="thead-light">
-            <tr>
-                <th class="text-center">Id</th>
-                <th class="text-center">Name</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var customer in Model)
-            {
+    <div class="table-responsive shadow-sm rounded">
+        <table class="table table-bordered table-hover align-middle text-center">
+            <thead class="table-primary">
                 <tr>
-                    <td class ="text-center">@customer.Id</td>
-                    <td>@customer.Name</td>
-                    <td class="text-center">
-                        <a asp-action="Delete" asp-controller="Customer" 
-                        asp-route-id="@customer.Id" title="Delete Customer @customer.Name">
-                            <i class="fa-solid fa-trash align-items-center"></i>
-                        </a>
-                    </td>
+                    <th title="Id" style="width:10%;">Id</th>
+                    <th title="Name">Name</th>
+                    <th title="Action" style="width: 15%;">Actions</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <div class="alert alert-warning">
-        There are no customer records.
+            </thead>
+            <tbody>
+                @foreach (var customer in Model)
+                {
+                    <tr>
+                        <td>@customer.Id</td>
+                        <td class="text-start">@customer.Name</td>
+                        <td class="text-center">
+                            <a asp-action="Delete" asp-controller="Customer" asp-route-id="@customer.Id"
+                               title="Delete Customer @customer.Name" class="btn btn-sm btn-outline-danger p-2">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 }
 
-<div class="mb-3">
-    <a asp-action="ExportDelimitatedCustomer" asp-controller="Customer" class="btn btn-primary">
-        Export Delimitated
+else
+{
+    <div class="alert alert-warning text-center">
+        <i class="fa-solid fa-triangle-exclamation me-2"></i> There are no customer records.
+    </div>
+}
+
+<div class="mb-4 mt-3">
+    <a asp-action="ExportDelimitatedCustomer" asp-controller="Customer" class="btn btn-primary me-2">
+        <i class="fa-solid fa-file-export me-1"></i> Export Delimitated
     </a>
     <a asp-action="ExportFixedCustomer" asp-controller="Customer" class="btn btn-primary">
-        Export Fixed
+        <i class="fa-solid fa-file-export me-1"></i> Export Fixed
     </a>
 </div>
