--- a/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Product/Index.cshtml
@@ -5,41 +5,52 @@
 }
 
 <div class="text-center mb-4">
-    <h1 class="display-5">Product List</h1>
+    <h1 class="display-5">
+        <i class="fa-solid fa-boxes-stacked me-2 text-primary"></i> Product List
+    </h1>
 </div>
 <hr>
-
-
 <div class="mb-3">
-    <a asp-action="Create" asp-controller="Product" class="btn btn-light">
-        New Product
+    <a asp-action="Create" asp-controller="Product" class="btn btn-success">
+        <i class="fa-solid fa-box-open me-1"></i> New Product
     </a>
 </div>
 
+
 @if (Model != null && Model.Count > 0)
 {
-    <table class="table table-striped table-hover">
-        <thead class="thead-light">
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Current Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var product in Model)
-            {
+    <div class="table-responsive shadow-sm rounded">
+        <table class="table table-bordered table-hover align-middle text-center">
+            <thead class="table-primary">
                 <tr>
-                    <td>@product.Id</td>
-                    <td>@product.Name</td>
-                    <td>@product.Description</td>
-                    <!-- C para formatar como moeda-->
-                    <td>@product.CurrentPrice.ToString("C")</td>
+                    <th style="width: 8%;">Id</th>
+                    <th class="text-start">Name</th>
+                    <th class="text-start">Description</th>
+                    <th style="width: 10%;">Price</th>
+                    <th style="width: 10%;">Action</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var product in Model)
+                {
+                    <tr>
+                        <td>@product.Id</td>
+                        <td class="text-start">@product.Name</td>
+                        <td class="text-start">@product.Description</td>
+                        <td class="text-center">@product.CurrentPrice.ToString("C")</td>
+                        <td class="text-center">
+                            <a asp-action="Delete" asp-controller="Product"
+                               asp-route-id="@product.Id"
+                               title="Delete Product @product.Name"
+                               class="btn btn-sm btn-outline-danger p-2">
+                                <i class="fa-solid fa-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 }
 else
 {
@@ -48,8 +59,13 @@ else
     </div>
 }
 
-<div class="mb-3">
-    <a asp-action="ExportDelimitatedProduct" asp-controller="Product" class="btn btn-primary">
-        Export to txt File
+
+
+<div class="mb-4 mt-3">
+    <a asp-action="ExportDelimitatedProduct" asp-controller="Product" class="btn btn-primary me-2">
+        <i class="fa-solid fa-file-export me-1"></i> Export Delimitated
+    </a>
+    <a asp-action="ExportFixedProduct" asp-controller="Product" class="btn btn-primary">
+        <i class="fa-solid fa-file-export me-1"></i> Export Fixed
     </a>
 </div>
