--- a/Classes/06_Poo/06_Poo/Views/Shared/_Layout.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Shared/_Layout.cshtml
@@ -38,6 +38,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">
+                                <i class="fa-solid fa-clipboard me-1"></i> Order
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">
                                 <i class="fa-solid fa-shield-halved me-1"></i> Privacy
                             </a>
