--- a/Classes/06_Poo/06_Poo/Views/Order/Export.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Order/Export.cshtml
@@ -9,8 +9,8 @@
     </h2>
 
     <div class="mt-4">
-        <a asp-action="Index" asp-controller="Product" class="btn btn-outline-secondary">
-            <i class="fa-solid fa-arrow-left me-1"></i> Back to product list
+        <a asp-action="Index" asp-controller="Order" class="btn btn-outline-secondary">
+            <i class="fa-solid fa-arrow-left me-1"></i> Back to order list
         </a>
     </div>
 
