--- a/Classes/06_Poo/06_Poo/Views/Order/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Order/Index.cshtml
@@ -6,48 +6,55 @@
 
 <div class="text-center mb-4">
     <h1 class="display-5">
-        <i class="fa-solid fa-clipboard me-2 text-primary"></i> Order List
+        <i class="fa-solid fa-clipboard me-2 text-primary"></i>
+        Order List
     </h1>
 </div>
-<hr>
+<hr />
+
 <div class="mb-3">
-    <a asp-action="Create" asp-controller="Order" class="btn btn-success">
+    <a asp-action="Create" class="btn btn-success">
         <i class="fa-solid fa-clipboard me-1"></i> New Order
     </a>
 </div>
 
-
-@if (Model != null && Model.Count > 0)
+@if (Model != null && Model.Any())
 {
     <div class="table-responsive shadow-sm rounded">
-        <table class="table table-bordered table-hover align-middle text-center">
+        <table class="table table-bordered table-hover align-middle mb-0">
             <thead class="table-primary">
                 <tr>
-                    <th style="width: 5%;"><i class="fa-solid fa-cart-plus"></i></th>
-                    <th style="width: 10%;">Item</th>
-                    <th class="text-start">Amount</th>
-                    <th style="width: 10%;">Price</th>
-                    <th style="width: 10%;">Action</th>
+                    <th style="width:10%;">Order ID</th>
+                    <th style="width:20%;">Customer</th>
+                    <th>Products</th>
+                    <th style="width:10%;">Total Items</th>
+                    <th style="width:15%;">Total Value</th>
+                    <th style="width:15%;">Order Date</th>
+                    <th style="width:10%;">Action</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var order in Model)
                 {
                     <tr>
-                        <td>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="@order.Id" id="@order.Id">
-                            </div>
-                        </td>
                         <td>@order.Id</td>
-                        <td class="text-start">@order.</td>
-                        <td class="text-start">@order.OrderDate</td>
-                        
+                        <td>@order.Customer?.Name</td>
+                        <td>
+                            <ul class="mb-0">
+                                @foreach (var item in order.OrderItems)
+                                {
+                                    <li>@item.Product?.Name (Qty: @item.Quantity)</li>
+                                }
+                            </ul>
+                        </td>
+                        <td>@order.CalculateTotalItems()</td>
+                        <td>@order.CalculateTotalAmount().ToString("C")</td>
+                        <td>@order.OrderDate.ToString("dd/MM/yyyy")</td>
                         <td class="text-center">
-                            <a asp-action="Delete" asp-controller="Order"
+                            <a asp-action="Delete"
                                asp-route-id="@order.Id"
-                               title="Delete Order @order.Id"
-                               class="btn btn-sm btn-outline-danger p-2">
+                               class="btn btn-sm btn-outline-danger p-2"
+                               title="Delete Order">
                                 <i class="fa-solid fa-trash"></i>
                             </a>
                         </td>
@@ -64,13 +71,11 @@ else
     </div>
 }
 
-
-
-<div class="mb-4 mt-3">
-    <a asp-action="ExportDelimitatedOrder" asp-controller="Order" class="btn btn-primary me-2">
+<div class="mt-4 mb-4">
+    <a asp-action="ExportDelimitatedOrder" class="btn btn-primary me-2">
         <i class="fa-solid fa-file-export me-1"></i> Export Delimitated
     </a>
-    <a asp-action="ExportFixedOrder" asp-controller="Order" class="btn btn-primary">
+    <a asp-action="ExportFixedOrder" class="btn btn-primary">
         <i class="fa-solid fa-file-export me-1"></i> Export Fixed
     </a>
 </div>
