--- a/Classes/06_Poo/06_Poo/Views/Order/Index.cshtml
+++ b/Classes/06_Poo/06_Poo/Views/Order/Index.cshtml
@@ -24,7 +24,7 @@
         <table class="table table-bordered table-hover align-middle mb-0">
             <thead class="table-primary">
                 <tr>
-                    <th style="width:10%;">Order ID</th>
+                    <th style="width:10%;">Id</th>
                     <th style="width:20%;">Customer</th>
                     <th>Products</th>
                     <th style="width:10%;">Total Items</th>
